<resources>
    <string name="app_name">MagtonicAttendance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Magtonic</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_login">Login</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_others">Others</string>
    <string name="nav_greeting">Hi, %s</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="first_company_name">Magtonic Technology Inc.</string>
    <string name="first_app_title">Mobile Attendance System</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="exit_app_title">Exit</string>
    <string name="exit_app_msg">Exit from this app?</string>
    <string name="staffinfo_staff_wifi_status">WiFi</string>
    <string name="loadingTitle2">Mobile Attendance</string>
    <string name="staffinfo_staff_num">EMP No:</string>string>
    <string name="staffinfo_staff">EMP Login:</string>string>
    <string name="staffinfo_staff_name">EMP Name:</string>string>
    <string name="staffinfo_staff_department">EMP Department:</string>string>
    <string name="staffinfo_staff_check_id_label">Authentication Code:</string>
    <string name="prompt_password">Password</string>
    <string name="frag_detail_empty_title">No data</string>
    <string name="first_time_use_description_string">First Login</string>
    <string name="nav_go_to_work">Go to Work</string>
    <string name="nav_off_work">一般下班</string>
    <string name="error_field_required">Employee No cannot be empty</string>string>
    <string name="toast_network_error">Network error</string>
    <string name="toast_server_error">Server error</string>
    <string name="login_account_empty">Account cannot be empty</string>
    <string name="login_password_empty">Password cannot be empty</string>

    <string name="logout_title">Log out</string>
    <string name="logout_title_msg">Log out from this account</string>
    <string name="ok">Ok</string>

    <string name="button_work">Clock On</string>
    <string name="button_offwork">Colck Off</string>
    <string name="button_goout">Go Out</string>
    <string name="button_btf">Go Back</string>
    <string name="button_work_overtime">Overtime On</string>
    <string name="button_offwwork_overtime">Overtime Off</string>
    <string name="nav_punchcard">PunchCard</string>
    <string name="signin_success">Sign in success</string>
    <string name="map_marker_my_locate">My Location</string>
    <string name="map_snippet">Longitude=%f Latitude=%f</string>
    <string name="map_maker_add">Marker Location %d</string>
    <string name="punchcard_gps_disable">GPS is Off. Punch time card only available while GPS is on.</string>
    <string name="punchcard_clock_on_success">Clock on punch card success</string>
    <string name="punchcard_clock_off_success">Clock off punch card success</string>
    <string name="punchcard_go_out_success">Go out punch card success</string>
    <string name="punchcard_go_back_success">Go back punch card success</string>
    <string name="punchcard_work_overtime_success">Work overtime punch card success</string>
    <string name="punchcard_offwork_overtime_success">Offwork overtime punch card success</string>
    <string name="login_register">Register</string>
    <string name="login_auth_code">Auth code: %s</string>
    <string name="punchcard_gps_locate_failed">Locate failed. GPS is disabled.</string>
    <string name="nav_history">History</string>
    <string name="history_empty">No records.</string>
    <string name="history_detail_title">Punch card location</string>
    <string name="history_clear_title">Clear</string>
    <string name="history_clear_all_history">Clear all history?</string>
    <string name="nav_about">About</string>
    <string name="version_string">Version: %d.%s</string>
</resources>
