<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="?attr/actionBarSize"
        android:id="@+id/login_container">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linearLayoutLogin">

        <ImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:src="@drawable/magtoniclogo"
                android:contentDescription="@string/app_name"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/first_load_textView_title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/loadingTitle2"
                    android:textColor="@color/font_color_gray"
                    android:textSize="20sp"
                    android:textStyle="bold" />




            <EditText
                    android:id="@+id/ac_first_time_use_staff_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/staffinfo_staff_num"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="20sp"
                    />
            <EditText
                    android:id="@+id/ac_first_time_use_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="20sp"
                    />


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@android:color/holo_blue_light"
                    android:visibility="invisible"/>




            <Button
                    android:id="@+id/ac_first_time_use_login_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/nav_login"
                    android:textStyle="bold"
                    android:background="@drawable/button_corner_blue"
                    android:layout_gravity="center|bottom"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    />

            <!--TextView
                    android:id="@+id/frag_staffinfo_wifi_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_auth_code"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />


            <TextView
                    android:id="@+id/ac_first_time_use_description_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_time_use_description_string"
                    android:textColor="@color/colorPrimary"
                    android:textSize="23sp" />

            <Button
                    android:id="@+id/ac_first_time_use_sign_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_corner_blue"
                    android:focusable="false"
                    android:text="@string/login_register"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="visible" /-->
        </LinearLayout>


    </LinearLayout>



</RelativeLayout>